2023-02-16  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'add_dmesg'

	include the real 'dmesg' tool from the util-linux package (we left the Busybox command enabled so we have it in initramfs in case it's needed for debugging; during init, Busybox should not make a link since the real binary already exists)

2023-02-06  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'mofed_5.8'

	updates for MOFED 5.8; etc/rc.d/common: added the wait_for_pid_stop() helper function; rc.libvirtdexporter: use quiet grep and the new wait_for_pid_stop() function after sending SIGTERM

2023-02-05  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'rc_lvm2_stop'

	rc.lvm2: in stop() actually stop (deactivate) any VG's; rc.nvmet: don't write out the JSON config file when stopping (this should be saved separately as how we do with SCST so we don't ever save a "bad" file); fixed bug in ocf:esos:alua when setting the peer TPG state via SSH fails

2023-01-25  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'pwatcher'

	added a 'pwatcher' helper script to handle restarting processes; rc.libvirtdexporter: use pwatcher since libvirtdexporter dies randomly

	Merge branch 'rc_network_br_vlan'

	rc.network: applied several enhancements to handle VLAN's with bridge interfaces properly

2023-01-20  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'scst_n_kern_bump'

	updated Linux to latest 5.4 patch release (5.4.229); updated SCST to latest commit from 3.7.x release branch

	Merge branch 'nvme_tcp'

	enabled additional NVMe drivers in the kernel config (including TCP host/target support); rc.2: load the nvmet-tcp module on boot; fixed tar.bz2 removal in 'clean' target

	Merge branch 'single_user'

	fixed incorrect (broken) cleanup steps in the 'image' target; handle the 'single_user' kernel parameter in rc.sysinit

2023-01-05  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'add_sas_utils'

	added the smp_utils and sasutils packages
